Version 2.0.2
----------------------------------
Minor performance tweak to sample htaccess.txt
Improvements and re-factor the way headers are sent wrt caching
Add a new method to the ModuleOperations class to allow a module to be within a namespace.
Enhances the Group class.
Enhancements and fixes to the cms_url class.

MicroTiny v2.0.1
- Now add page hierarchy to autocomplete text when using the linker.


Version 2.0.1 - Adelaide
----------------------------------
Core - General
- Improved optimization in ContentOperations::SetAllHierarchyPositions.
- Fixed return type of ContentOperations::GetPageIdFromAlias().
- Help for the {cms_html_options} plugin.
- Change the default page template to use {Navigator}.
- Explicitly force $smarty->fetch() to create a new template, and therefore a new scope. Keep track of scopes in a stack.
- Change prototype to CMSModule::DoActionBase to pass in the current template object.
- SITENAME is now assigned as a Smarty global.
  (fixes some variable scope issues)
- Fix problem with changing content types.
- Fix problem with CmsLayoutTemplateQuery wrt the editable option, that generated an SQL error.
  (resolves problems where people have additional editor access to templates, but no other design manager permissions).
- Fix minor JavaScript errors in plugin (error checking).
- Fix problems where If assign was passed to a {content} tag, do not pass it to the module on a mact request.
- Implements the completely forgotten 403 exception stuff and the IsPermitted content method.
- Improve the cmsms_dirtyform jQuery plugin to support the unload handler and an onUnload callback.
- Fixed the jQuery page selector plugin when the current value points to an invalid page,  and fixes for asynchronous Ajax.
- Adds a globally available cms_busy() JavaScript function for the Admin.
- Fix problem with html entitites in email addresses in user settings.
- Fix problem with {content cssname=string} and quotes.