@@ -5,6 +5,7 @@ Improvements and re-factor the way headers are sent wrt caching
 Add a new method to the ModuleOperations class to allow a module to be within a namespace.
 Enhances the Group class.
 Enhancements and fixes to the cms_url class.
+Modified the $mod->smarty reference to be smarter... it is now deprecated.
 
 MicroTiny v2.0.1
 - Now add page hierarchy to autocomplete text when using the linker.
